crates/toml/tests/snapshots/invalid/string/multiline-bad-escape-01.stderr
TOML parse error at line 1, column 10
  |
1 | k = """t\a"""
  |          ^
missing escaped value, expected `b`, `e`, `f`, `n`, `r`, `\`, `"`, `x`, `u`, `U`
